--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+
+# dependencies
+node_modules/
+
+# testing
+coverage/
+
+# misc
+.DS_Store
+.env
+npm-debug.log
